# LaTexAPI

./: .dockerignore  .gitignore  CONTEXTO.md  Dockerfile  HELPGITHUB.md  LatexAPI – Blueprint Inicial.md  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/models/: schemas.py
app/services/: compiler.py
deploy/: stack.yml
